--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,5 +6,13 @@
 
 <body>
   <h1>hello inf134!</h1>
+  <p>
+  Will we use d3? Maybe. If so, these are examples we may be interested in:
+  <a href="http://orgo.stolarsky.com/">1</a> |
+  <a href="http://vowl.visualdataweb.org/webvowl/">2</a> |
+  <a href="https://risacher.org/galaxy-chart/">3</a> |
+  <a href="http://www.decembercafe.org/demo/relation/">4</a> |
+  <a href="https://nylen.io/d3-process-map/graph.php">5</a>
+  </p>
 </body>
 </html>
