--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,8 +6,7 @@
 
 <body>
   <h1>hello inf134!</h1>
-  <p>
-  this site is hosted on heroku and powered by Node.JS.
-  </p>
+  <img src="/img/globe.gif"/>
+  <p>this site is hosted on heroku and powered by Node.JS.</p>
 </body>
 </html>
