--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,6 +10,7 @@
 
 <body>
   <h1>hello inf134!</h1>
+    <h2>Team 12</h2>
     <div id="wheelDiv"></div>
 
     <!-- Insert generated HTML5 code from here -> http://pmg.softwaretailoring.net -->
