--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,13 @@
 <html>
 <head>
   <title>inf134 app</title>
-  <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
+  <link rel="stylesheet" type="text/css" href="/css/main.css" />
+  <link rel="stylesheet" type="text/css" href="/css/radial-menu.css" />
 </head>
 <body>
-  <script type="text/javascript">
-  </script>
+  <div id="chart"></div>
+
+  <script src="/js/lib/d3/build/d3.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/js/radial-menu.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
