--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,6 @@
 body {
+  margin: 0;
+  padding: 0;
   text-align: center;
   background-color: #E7E7E7;
   font-family: Helvetica, Arial, sans-serif;
