--- a/public/css/deforestation.css
+++ b/public/css/deforestation.css
@@ -21,7 +21,7 @@ html,body{
     min-height:100%;
     max-height:100%;
     background-size:cover;
-    background: url(../deforestation/img/forest-whitespace.jpg);
+    /*background: url(../deforestation/img/forest-whitespace.jpg); */
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -122,3 +122,25 @@ html,body{
 }
 
 */
+
+video {
+  /* Make video to at least 100% wide and tall */
+  min-width: 100%; 
+  min-height: 100%; 
+  
+  /* Setting width & height to auto prevents the browser from stretching or squishing the video */
+  width: auto;
+  height: auto;
+  
+  /* Center the video */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  z-index: -1;
+}
+
+
+////////////////////////////////////////
+
+  
