added sticky header to all topic pages
now we have a sticky header but need to fix white space and formatting
of text

also fixed issue about video creating extra width to page but video is
really screwing up fluidity of page

--- a/public/css/climatechange.css
+++ b/public/css/climatechange.css
@@ -5,7 +5,7 @@ html,body{
 
 
 /*maybe make the heading 2 seperate elements to make the bar have opacity and eventually implement the following header bar in JS*/
-#title{
+/*#title{
     text-align: center;
     background: black;
     color: white;
@@ -14,6 +14,17 @@ html,body{
     margin-right: -10px;
     margin-left: -10px;
     opacity: 1;
+}*/
+
+header{
+    position:fixed;
+    text-align: center;
+    background: black;
+    color: white;
+    height: 100px;
+    width: 100%;
+    top: 0;
+    opacity: .7;
 }
 
 #page1{
