--- a/public/css/deforestation.css
+++ b/public/css/deforestation.css
@@ -5,15 +5,35 @@ html,body{
 
 
 /*maybe make the heading 2 seperate elements to make the bar have opacity and eventually implement the following header bar in JS*/
-#title{
+header{
+    position:fixed;
     text-align: center;
     background: black;
     color: white;
-    padding: 2px;
-    margin-top: -10px;
-    margin-right: -10px;
-    margin-left: -10px;
-    opacity: .5;
+    height: 100px;
+    width: 100%;
+    top: 0;
+    opacity: .7;
+}
+
+.container{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    padding:0;
+    margin:0;
+    left: 0px;
+    top: 0px;
+    z-index: -1000;
+    overflow:hidden;
+}
+
+.videoPlayer {
+    min-height: 100%;
+    /*min-width:100%;*/
+    position:absolute;
+    bottom:0;
+    left:0;
 }
 
 #page1{
@@ -57,39 +77,6 @@ a:hover{
     margin-left: 20px;
 
 }
-/*see if i can make the background a video like a picture*/
-/*video#forestvid{ 
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -100;
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-    background-size: cover;
-
-}*/
-
-/*img{
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -100;
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-    background-size: cover; 
-}*/
 
 
 #page2{
