adding more style

--- a/public/css/climatechange.css
+++ b/public/css/climatechange.css
@@ -2,6 +2,10 @@ html,body{
     margin: 0px;
     padding: 0px;
 }
+/*for some reason, when i try to do margin-top for climate change, it adds a big white space at the top of each section
+Had to use padding-top instead for now
+*/
+
 #p1{
     color: white;
     padding-top: 510px;
@@ -11,14 +15,23 @@ html,body{
 #p2{
     color: white;
     font-family: 'Quicksand', sans-serif; 
-    padding-top: 510px;
+    padding-top: 460px;
     margin-left: 20px;
+    width: 500px
 }
 #gw{
     color: firebrick; 
 }
 #cc{
-    color:cadetblue
+    color: rebeccapurple;
+}
+#p3{
+    color:white;
+    font-family: 'Quicksand', sans-serif;
+    width: 500px;
+    background: rgba(0, 0, 0, 0.5);
+    padding-top: 50px;
+    margin-left: 400px;
 }
 
 /*maybe make the heading 2 seperate elements to make the bar have opacity and eventually implement the following header bar in JS*/
