add more climate change content

--- a/public/css/climatechange.css
+++ b/public/css/climatechange.css
@@ -20,10 +20,10 @@ Had to use padding-top instead for now
     width: 500px
 }
 #gw{
-    color: firebrick; 
+    color: palevioletred; 
 }
 #cc{
-    color: rebeccapurple;
+    color: skyblue;
 }
 #p3{
     color:white;
