add climate change image

--- a/public/css/climatechange.css
+++ b/public/css/climatechange.css
@@ -92,7 +92,7 @@ header{
     min-height:100%;
     max-height:100%;
     background-size:cover;
-    background: url();
+    background: url(../climate-change/img/city-sky-skyline-australia.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
