--- a/public/css/extinction.css
+++ b/public/css/extinction.css
@@ -32,7 +32,7 @@ header{
     min-height:100%;
     max-height:100%;
     background-size:cover;
-    background: url();
+    background: url("../species-extinction/img/flamingos.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -42,7 +42,7 @@ header{
     min-height:100%;
     max-height:100%;
     background-size:cover;
-    background: url();
+    background: url("../species-extinction/img/dying-elephant.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -52,7 +52,7 @@ header{
     min-height:100%;
     max-height:100%;
     background-size:cover;
-    background: url();
+    background: url("../species-extinction/img/global-warming.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -62,7 +62,7 @@ header{
     min-height:100%;
     max-height:100%;
     background-size:cover;
-    background: url();
+    background: url("../species-extinction/img/waterfront.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -72,7 +72,7 @@ header{
     min-height:100%;
     max-height:100%;
     background-size:cover;
-    background: url();
+    background: url("../species-extinction/img/lions.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
