cleanup, hover on home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
   "></div>
 <% } %>
   <% topics.forEach(topic => { %>
-    <a href="/<%= topic.id %>" class="<%= topic.id %>" style="
+    <a href="/<%= topic.id %>" class="topic <%= topic.id %>" style="
       background: url(<%= topic.img %>) center center / cover no-repeat;
       position: absolute;
       height: 50%;
