--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,3 +3,11 @@ body {
   background-color: #E7E7E7;
   font-family: Helvetica, Arial, sans-serif;
 }
+
+a.topic {
+  opacity: 0.8;
+}
+
+a.topic:hover {
+  opacity: 1;
+}
