--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,7 @@
 body {
   text-align: center;
   background-color: #E7E7E7;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Muli', sans-serif, Helvetica, Arial;
 }
 
 a.topic {
