added functionality to the scroll buttons
just moved position of arrown so i can see it. header was blocking it

--- a/public/css/deforestation.css
+++ b/public/css/deforestation.css
@@ -142,19 +142,9 @@ a:hover{
 }
 
 
-/*scolling stuff. Use JS for it later*/
-/*#scroll1{
-    text-align: center;
-    position: fixed;
-    bottom: 30px;
-    width: 100%;
-    color: black;
-}
-
-*/
-
 
 .arrow {
+  margin-top: 75px;
   bottom: 0;
   left: 50%;
   margin-left:-20px;
