--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,7 @@ body {
   text-align: center;
   background-color: #E7E7E7;
   font-family: 'Muli', sans-serif, Helvetica, Arial;
+    color: white;
 }
 
 a.topic {
