--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
       height: 50%;
       width: 50%;
       <%= topic.style %>;
-      "></a>
+      "><span class="title"><%= topic.label %></span></a>
   <% }) %>
 </body>
 </html>
